# SpeechTherapy-RAG

./: README.md  main.py  requirements.txt
backend/: DockerFile  main.py  pyproject.toml  requirements.txt
backend/graph/: generate.py
backend/ingestion/: ingest.py  loader.py
backend/llm/: llm_setup.py
frontend/: app.json  package-lock.json  package.json  tsconfig.json
frontend/app/(tabs)/: _layout.tsx  index.tsx
frontend/app/(tabs)/rag/: chat.tsx
frontend/hooks/: useColorScheme.ts
graph/: build_graph.py  generate.py
graph/nodes/: retriever.py
llm/: llm_setup.py
